--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   },
   "homepage": "https://github.com/HDias/NextBlog#readme",
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "@popperjs/core": "^2.9.0",
+    "bootstrap": "^5.0.0-beta2",
     "next": "^10.0.7",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/react": "^17.0.2",
-    "@types/react-bootstrap": "^0.32.25",
-    "@types/react-dom": "^17.0.1"
+    "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.7",
+    "tailwindcss": "^2.0.3"
   }
 }
