--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "@popperjs/core": "^2.9.0",
     "bootstrap": "^5.0.0-beta2",
+    "date-fns": "^2.19.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/next": "^9.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
