--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.9.0",
     "bootstrap": "^5.0.0-beta2",
     "date-fns": "^2.19.0",
+    "html-react-parser": "^1.2.4",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
