--- a/package.json
+++ b/package.json
@@ -23,19 +23,18 @@
     "@popperjs/core": "^2.9.0",
     "bootstrap": "^5.0.0-beta2",
     "date-fns": "^2.19.0",
+    "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
     "html-react-parser": "^1.2.4",
     "next": "^10.0.7",
+    "next-firebase-auth": "^0.13.0-alpha.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
-    "@types/date-fns": "^2.6.0",
-    "@types/next": "^9.0.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.7",
-    "tailwindcss": "^2.0.3"
+    "postcss": "^8.2.7"
   }
 }
