--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.0",
     "bootstrap": "^5.0.0-beta2",
+    "ckeditor4-react": "^1.4.1",
     "date-fns": "^2.19.0",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
